# MCP

./: .gitignore  AGENTES_EQUIPO_RETARGET.md  AGENTES_POR_ROL_CLAUDE.md  ARCHITECTURE.html  ARQUITECTURA_COLABORATIVO_CLAUDE.md  ARQUITECTURA_DRIVE_SUPERVISION.md  BACKLOG_LUIS.md  BUILD_COMPLETE_STATUS.md  BUILD_STATUS.md  CLAUDE.md  CRM_PROPUESTAS.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GOOGLE_CLOUD.md  Dockerfile  EJEMPLOS_OPERACION_REAL.md  GOOGLE_CLOUD_FREE_TIER.md  HANDOFF.md  INTEGRATION_GUIDE.md  MCP_EVOLUTION_PLAN.md  MCP_RAILS_ARCHITECTURE.md  METODOLOGIA.md  METODOLOGIAS_INTEGRADAS.md  OPERATIONAL_RULES.md  PROJECTS_ARCHITECTURE.md  PROMPT_ENGINEERING.md  PROPUESTA_VALOR_AGENCIA.md  PUYEHUE_NEXT_ACTIONS.md  PUYEHUE_PROJECT_SUMMARY.md  RESPONSIBLE_AI.md  ROLE_CONFIGURATION.md  SECURITY_NOTICE.md  SESSION_SUMMARY_20260429.md  SETUP_GOOGLE_CLOUD_PASO_A_PASO.md  SETUP_SECRETS.md  STATUS_REPORT.md  SUBAGENT_ARCHITECTURE.md  TEST_RESULTS.md  WINDSURF_GLOBAL_RULE.md  chat.mjs  cloudbuild.yaml  (+11 more)
.claude/: settings.local.json.bak.20260426-004339
PROJECTS/: puyehue-config.json
contracts/: puebloladehesa-rediseno.json  team.json
docs/: .replit  Dockerfile  FLOW_TICKETS_AND_MONITOR.md  SHARE.md  index.html  package.json  railway.json  server.js
lessons/: lessons.jsonl
mcp-projects/: MCP-config.json  cms-retarget-config.json  cms-retarget-universal-config.json  puebloladehesa-web-config.json  puyehue-config.json  (+3 more)
servers/quality-gate/: Cargo.toml
servers/quality-gate/src/: main.rs
servers/quality-gate/src/tools/: contract.rs  iterate.rs  mod.rs  session.rs
(+210 files in other folders)
