[package]
name = "quality-gate-server"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"

[dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
